--- a/src/Mapbender/WmcBundle/Resources/views/Element/suggestmap-content.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Element/suggestmap-content.html.twig
@@ -1,16 +1,21 @@
 <ul>
 {% for receiver in configuration.receiver %}
-    {% if receiver == 'email' %}
-    <li><span class="mb-button iconBig iconEmail"></span> <span class="span-link" id="suggestmap-email">{{ 'mb.wmc.element.suggestmap.content.email'|trans }}</span></li>
-    {% endif %}
-    {% if receiver == 'facebook' %}
-    <li><span class="mb-button iconBig iconFacebook"></span> <span class="span-link" id="suggestmap-twitter">{{ 'mb.wmc.element.suggestmap.content.twitter'|trans }}</span></li>
-            {% endif %}
-    {% if receiver == 'twitter' %}
-    <li><span class="mb-button iconBig iconTwitter"></span> <span class="span-link" id="suggestmap-facebook">{{ 'mb.wmc.element.suggestmap.content.facebook'|trans }}</span></li>
-    {% endif %}
-    {% if receiver == 'google+' %}
-    <li><span class="mb-button iconBig iconGooglePlus"></span> <span class="span-link" id="suggestmap-googleplus">{{ 'mb.wmc.element.suggestmap.content.google+'|trans }}</span></li>
-    {% endif %}
+
+    {%- if receiver == 'email' %}
+    <li id="suggestmap-email"><span class="mb-button iconBig iconEmail"></span> <span class="span-link">{{ 'mb.wmc.element.suggestmap.content.email'|trans }}</span></li>
+    {% endif -%}
+
+    {%- if receiver == 'facebook' %}
+    <li id="suggestmap-facebook"><span class="mb-button iconBig iconFacebook"></span> <span class="span-link" >{{ 'mb.wmc.element.suggestmap.content.facebook'|trans }}</span></li>
+    {% endif -%}
+
+    {%- if receiver == 'twitter' %}
+    <li id="suggestmap-twitter"><span class="mb-button iconBig iconTwitter"></span> <span class="span-link" >{{ 'mb.wmc.element.suggestmap.content.twitter'|trans }}</span></li>
+    {% endif -%}
+
+    {%- if receiver == 'google+' %}
+    <li id="suggestmap-googleplus"><span class="mb-button iconBig iconGooglePlus"></span> <span class="span-link">{{ 'mb.wmc.element.suggestmap.content.google+'|trans }}</span></li>
+    {% endif -%}
+
 {% endfor %}
 </ul>
