--- a/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
@@ -1,47 +1,99 @@
 <div id="{{ id }}" class="mb-element mb-element-printclient" title="{{ title |trans }}">
-    <div class="format-form">
-        <form id="formats" action="">
-            <label class="labelInput">{{ 'mb.core.printclient.label.template' | trans }}</label>
-            <div class="dropdown">
-              <select name="template" class="hiddenDropdown">
-                  {% for id, template in configuration.templates %}
-                    <option value="{{ id }}">{{ template.label }}</option>
-                  {% endfor %}
-              </select>
-              <div class="dropdownValue iconDown"></div>
-              <ul class="dropdownList"></ul>
-            </div>            
 
-            <label class="labelInput">{{ 'mb.core.printclient.label.quality' | trans }}</label>
-            <div class="dropdown">
-                <select name="quality" class="hiddenDropdown">
-                    {% for key , label in configuration.quality_levels %}
-                     <option value="{{ key }}">{{ label }}</option>
-                    {% endfor %}
-                </select>
-              <div class="dropdownValue iconDown"></div>
-              <ul class="dropdownList"></ul>
-            </div>
+    <div class="tab-container">
+        <ul class="tabs">
+            <li><a href="#tabs-1">Settings</a></li>
+            <li><a href="#tabs-2">Own Queue</a></li>
+            <li><a href="#tabs-3">All users</a></li>
+        </ul>
+        <div id="tabs-1" class="print-form">
+            <div class="format-form">
+                <form id="formats" action="">
+                    <div class="form-element">
+                        <label class="labelInput">{{ 'mb.core.printclient.label.template' | trans }}</label>
 
-            <label class="labelInput">{{ 'mb.core.printclient.label.scale' | trans }}</label>
-            <div class="dropdown">
-              <select name="scale_select" class="hiddenDropdown"></select>
-              <div class="dropdownValue iconDown"></div>
-              <ul class="dropdownList"></ul>
+                        <div class="dropdown">
+                            <select name="template" class="hiddenDropdown">
+                                {% for id, template in configuration.templates %}
+                                    <option value="{{ id }}">{{ template.label }}</option>
+                                {% endfor %}
+                            </select>
+
+                            <div class="dropdownValue iconDown"></div>
+                            <ul class="dropdownList"></ul>
+                        </div>
+                    </div>
+
+                    <div class="form-element">
+                        <label class="labelInput">{{ 'mb.core.printclient.label.quality' | trans }}</label>
+
+                        <div class="dropdown">
+                            <select name="quality" class="hiddenDropdown">
+                                {% for key , label in configuration.quality_levels %}
+                                    <option value="{{ key }}">{{ label }}</option>
+                                {% endfor %}
+                            </select>
+
+                            <div class="dropdownValue iconDown"></div>
+                            <ul class="dropdownList"></ul>
+                        </div>
+                    </div>
+
+                    <div class="form-element">
+                        <label class="labelInput">{{ 'mb.core.printclient.label.scale' | trans }}</label>
+                        <div class="dropdown">
+                            <select name="scale_select" class="hiddenDropdown"></select>
+                            <div class="dropdownValue iconDown"></div>
+                            <ul class="dropdownList"></ul>
+                        </div>
+                    </div>
+
+                    <div class="form-element">
+                        <input class="input" type="text" name="scale_text" size="8"/>
+                    </div>
+
+                    <div class="form-element">
+                        <label class="labelInput"
+                               for="rotation">{{ 'mb.core.printclient.label.rotation' | trans }}</label>
+                        <input class="input" type="text" name="rotation"/>
+
+                        <div id="slider"></div>
+                    </div>
+
+                    <div id="extra_fields"></div>
+                    <div class="clearContainer"></div>
+                    <div id="layers"></div>
+                    <input type="submit" style="display: none"/>
+                </form>
             </div>
-            <div>
-              <input class="input" type="text" name="scale_text" size="8"/>
-            </div>
-            <div>
-                <label class="labelInput" for="rotation">{{ 'mb.core.printclient.label.rotation' | trans }}</label>
-                <input class="input" type="text" name="rotation"/>
-                <div id="slider"></div>
-            </div>
-            <div id="extra_fields"></div>
-            <div class="clearContainer"></div>
-            <br>
-            <div id="layers"></div>
-            <input type="submit" style="display: none"/>
-        </form>
+        </div >
+
+        <div id="tabs-2" class="own-queues">
+            <table>
+                <thead>
+                <tr>
+                    <th class="id">{{ "mb.print.queue.table.head.id" | trans }}</th>
+                    <th>{{ "mb.print.queue.table.head.created" | trans }}</th>
+                    <th class="status">{{ "mb.print.queue.table.head.rendered" | trans }}</th>
+                    <th>{{ "mb.print.queue.table.head.link" | trans }}</th>
+                </tr>
+                </thead>
+            </table>
+        </div>
+
+        <div id="tabs-3" class="all-queues">
+            <table>
+                <thead>
+                <tr>
+                    <th class="id">{{ "mb.print.queue.table.head.id" | trans }}</th>
+                    <th>{{ "mb.print.queue.table.head.created" | trans }}</th>
+                    <th>{{ "mb.print.queue.table.head.user" | trans }}</th>
+                    <th class="status">{{ "mb.print.queue.table.head.rendered" | trans }}</th>
+                    <th>{{ "mb.print.queue.table.head.link" | trans }}</th>
+                </tr>
+                </thead>
+            </table>
+        </div>
+
     </div>
 </div>
