--- a/src/Mapbender/CoreBundle/Resources/views/Element/printclient.json.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/printclient.json.twig
@@ -2,5 +2,6 @@
 "mb.core.printclient.popup.btn.ok": "{{ "mb.core.printclient.popup.btn.ok" | trans}}",
 "mb.core.printclient.popup.btn.cancel": "{{ "mb.core.printclient.popup.btn.cancel" | trans}}",
 "mb.core.printclient.info.noactivelayer": "{{ "mb.core.printclient.info.noactivelayer" | trans}}",
+"mb.core.printclient.popup.btn.queues": "{{ "mb.core.printclient.popup.btn.queues" | trans}}",
 "mb.core.printclient.form.required": "{{ "mb.core.printclient.form.required" | trans}}"
 }
