--- a/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/printclient.html.twig
@@ -2,9 +2,9 @@
 
     <div class="tab-container">
         <ul class="tabs">
-            <li><a href="#tabs-1">Settings</a></li>
-            <li><a href="#tabs-2">Own Queue</a></li>
-            <li><a href="#tabs-3">All users</a></li>
+            <li><a href="#tabs-1" class="settings">{{ 'mb.core.printclient.label.settings' | trans }}</a></li>
+            <li><a href="#tabs-2" class="own-queue">{{ 'mb.core.printclient.label.queues' | trans }}</a></li>
+            <li><a href="#tabs-3" class="all-user">{{ 'mb.core.printclient.label.global_queues' | trans }}</a></li>
         </ul>
         <div id="tabs-1" class="print-form">
             <div class="format-form">
